# LearningOpenCV

./: CMakeLists.txt  LICENSE  README.md
Lesson_01/: CMakeLists.txt
Lesson_01/src/: main.cpp
